# DeltaBetaCL

./: CMakeLists.txt  README.md
assets/: config.cfg  engine.cfg  icon.psd
assets/OpenCL/: distance_field.c  kernel.c  main.c  ray_marching.c
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: CLFunction.h  CLRender.cpp  CLRender.h  CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  OpenCL.h  Resource.aps  Resource.rc  Utilities.cpp  Utilities.h  World.cpp  World.h  main.cpp
